[tool.poetry]
name = "iosfather"
version = "0.1.0"
description = ""
authors = ["Alexander <a.pride.xxi@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
guide = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

